Ignorar carpeta de Recursos en GIT

--- a/.gitignore
+++ b/.gitignore
@@ -48,3 +48,11 @@ Java Essential Training/main/java/com/dg/banco/CuentaBancaria.java
 Java Essential Training/main/java/com/dg/banco/Main.java
 Java Essential Training/main/java/com/dg/banco/TipoDeCuenta.java
 Java Essential Training/main/java/com/dg/cajero/Main.java
+Proyectos/Recursos/Estructura de Datos/Dijkstra.pdf
+Proyectos/Recursos/Estructura de Datos/Grafo.jpg
+Proyectos/Recursos/Estructura de Datos/Juego_de_la_vida.pdf
+Proyectos/Recursos/Estructura de Datos/Laberinto.pdf
+Proyectos/Recursos/Hanoi/hanoi.h
+Proyectos/Recursos/Hanoi/hanoi.java
+Proyectos/Recursos/Hanoi/hanoi.jpeg
+Proyectos/Recursos/Hanoi/hanoi.py
