Otro archivo de recursos ignorado

--- a/.gitignore
+++ b/.gitignore
@@ -56,3 +56,4 @@ Proyectos/Recursos/Hanoi/hanoi.h
 Proyectos/Recursos/Hanoi/hanoi.java
 Proyectos/Recursos/Hanoi/hanoi.jpeg
 Proyectos/Recursos/Hanoi/hanoi.py
+Proyectos/Recursos/Hanoi/javahanoi.jpg
